bitfields/tests/compile_error_cases/errors/bitfield_builder_can_not_write_ro_field.rs
#[bitfield(u8)]
struct Bitfield {
    #[bits(4)]
    rw: u8,
    #[bits(4, access = ro)]
    ro: u8,
}

fn main() {
    let b = BitfieldBuilder::new().with_ro(0xF).build();
    assert_eq!(0xF, b.ro());
}
