bitfields/tests/compile_error_cases/errors/bitfield_builder_can_not_write_ro_field.stderr
error: cannot find attribute `bitfield` in this scope
 --> tests/compile_error_cases/errors/bitfield_builder_can_not_write_ro_field.rs:1:3
  |
1 | #[bitfield(u8)]
  |   ^^^^^^^^
  |
help: consider importing one of these attribute macros
  |
1 + use bitfields::bitfield;
  |
1 + use bitfields_impl::bitfield;
  |

error: cannot find attribute `bits` in this scope
 --> tests/compile_error_cases/errors/bitfield_builder_can_not_write_ro_field.rs:3:7
  |
3 |     #[bits(4)]
  |       ^^^^

error: cannot find attribute `bits` in this scope
 --> tests/compile_error_cases/errors/bitfield_builder_can_not_write_ro_field.rs:5:7
  |
5 |     #[bits(4, access = ro)]
  |       ^^^^

error[E0433]: cannot find type `BitfieldBuilder` in this scope
  --> tests/compile_error_cases/errors/bitfield_builder_can_not_write_ro_field.rs:10:13
   |
10 |     let b = BitfieldBuilder::new().with_ro(0xF).build();
   |             ^^^^^^^^^^^^^^^ use of undeclared type `BitfieldBuilder`
